fix admin bar gap

--- a/content/themes/ten10_roots/assets/css/main.css
+++ b/content/themes/ten10_roots/assets/css/main.css
@@ -6229,6 +6229,9 @@ footer .content:after {
   height: 20px;
   width: 20px;
 }
+html {
+  margin-top: 0 !important;
+}
 #wpadminbar {
   bottom: 0 !important;
   top: unset !important;
