--- a/content/themes/ten10_roots/assets/less/_global.less
+++ b/content/themes/ten10_roots/assets/less/_global.less
@@ -21,6 +21,9 @@
     width: 20px;
 }
 
+html {
+    margin-top: 0 !important;
+}
 
 
 #wpadminbar {
